api 로직 추가중

--- a/src/Styles/mycalendar.css
+++ b/src/Styles/mycalendar.css
@@ -240,7 +240,7 @@ body {
   margin-top: 20px; /* 위쪽 여백 추가 */
 }
 
-/* 컨텐츠 추천 버튼 */
+/* 음악 추천 버튼 */
 .recommend-button {
   background-color: #676d63;
   color: #fff;
