--- a/src/Styles/mycalendar.css
+++ b/src/Styles/mycalendar.css
@@ -233,4 +233,17 @@
   .recommend-button:hover {
     background-color: #4a4f44;
   }
+  .diary-button {
+    background-color: #4caf50; /* 초록색 */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-left: 10px;
+    font-size: 16px;
+  }
   
+  .diary-button:hover {
+    background-color: #45a049;
+  }  
