--- a/src/Styles/EmotionManagement.css
+++ b/src/Styles/EmotionManagement.css
@@ -1,4 +1,5 @@
 .management-popup {
+    max-width: 90%;
     width: 600px;
     background-color: #ffffff;
     border-radius: 20px;
@@ -16,8 +17,6 @@
 
 .management-tips {
     list-style: none;
-    padding: 0;
-    margin: 0;
     display: flex;
     flex-direction: column;
     gap: 10px;
