--- a/src/Styles/MusicRecommendation.css
+++ b/src/Styles/MusicRecommendation.css
@@ -1,64 +1,82 @@
 .music-recommendation-container {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-    font-family: Arial, sans-serif;
-  }
-  
-  .title {
-    font-size: 2rem;
-    color: #1db954; /* Spotify 그린 */
-    margin-bottom: 20px;
-  }
-  
-  .track-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .track-item {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin: 20px 0;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .track-item h3 {
-    font-size: 1.2rem;
-    margin: 0;
-    color: #333;
-  }
-  
-  .track-item p {
-    font-size: 1rem;
-    margin: 0;
-    color: #666;
-  }
-  
-  iframe {
-    border-radius: 8px;
-    margin-top: 10px;
-  }
-  
-  .loading-message {
-    font-size: 1.2rem;
-    color: #999;
-  }
-  
-  .error-message {
-    font-size: 1.2rem;
-    color: red;
-  }
-  
-  .no-data-message {
-    font-size: 1.2rem;
-    color: #555;
-  }
-  
+  padding: 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
+.title {
+  font-size: 2rem;
+  color: #1db954; /* Spotify 그린 */
+  margin-bottom: 30px;
+}
+
+.track-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.track-item {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 250px;
+}
+
+.track-album-art {
+  width: 150px;
+  height: 150px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.track-item h3 {
+  font-size: 1.2rem;
+  margin: 10px 0;
+  color: #333;
+  text-align: center;
+}
+
+.track-item p {
+  font-size: 1rem;
+  color: #666;
+  margin: 5px 0;
+}
+
+iframe {
+  margin-top: 10px;
+  border-radius: 8px;
+  width: 100%;
+  height: 80px;
+  border: none;
+}
+
+.loading-message,
+.error-message,
+.no-data-message {
+  font-size: 1.2rem;
+  margin-top: 20px;
+}
+
+.loading-message {
+  color: #999;
+}
+
+.error-message {
+  color: red;
+}
+
+.no-data-message {
+  color: #555;
+}
